fix color contrast issue for sr

--- a/idbase/static/idbase/css/main.css
+++ b/idbase/static/idbase/css/main.css
@@ -743,7 +743,7 @@ select {
 }
 
 .nav-pills>li>a:hover, .nav-pills>li>a:focus {
-    color: #85754d;
+    color: #e8e3d3;
     background-color: #4b2e83;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
